Add parsing for delegated non-extended stats

--- a/workbooks/data_by_pseudonym.ipynb
+++ b/workbooks/data_by_pseudonym.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "import netaddr\n",
     "\n",
-    "from rpki_analysis.delegated_stats import read_delegated_stats"
+    "from rpki_analysis.delegated_stats import read_delegated_extended_stats"
    ]
   },
   {
@@ -25,48 +25,49 @@
    "execution_count": 2,
    "id": "fcfb6c16-04d6-4035-bbc3-b2d73f727573",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ClientPayloadError",
+     "evalue": "Response payload is not completed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mContentLengthError\u001b[0m                        Traceback (most recent call last)",
+      "File \u001b[0;32m~/Library/Caches/pypoetry/virtualenvs/rpki-analysis-eyLydR3P-py3.12/lib/python3.12/site-packages/aiohttp/client_proto.py:83\u001b[0m, in \u001b[0;36mResponseHandler.connection_lost\u001b[0;34m(self, exc)\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 83\u001b[0m     uncompleted \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parser\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfeed_eof\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     84\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "File \u001b[0;32m~/Library/Caches/pypoetry/virtualenvs/rpki-analysis-eyLydR3P-py3.12/lib/python3.12/site-packages/aiohttp/_http_parser.pyx:510\u001b[0m, in \u001b[0;36maiohttp._http_parser.HttpParser.feed_eof\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mContentLengthError\u001b[0m: 400, message:\n  Not enough data for satisfy content length header.",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mClientPayloadError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m aiohttp\u001b[38;5;241m.\u001b[39mClientSession() \u001b[38;5;28;01mas\u001b[39;00m session:\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m session\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://ftp.ripe.net/pub/stats/ripencc/nro-stats/latest/nro-delegated-stats\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m resp:\n\u001b[0;32m----> 3\u001b[0m         data \u001b[38;5;241m=\u001b[39m read_delegated_extended_stats(io\u001b[38;5;241m.\u001b[39mStringIO(\u001b[38;5;28;01mawait\u001b[39;00m resp\u001b[38;5;241m.\u001b[39mtext()))\n",
+      "File \u001b[0;32m~/Library/Caches/pypoetry/virtualenvs/rpki-analysis-eyLydR3P-py3.12/lib/python3.12/site-packages/aiohttp/client_reqrep.py:1143\u001b[0m, in \u001b[0;36mClientResponse.text\u001b[0;34m(self, encoding, errors)\u001b[0m\n\u001b[1;32m   1141\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Read response payload and decode.\"\"\"\u001b[39;00m\n\u001b[1;32m   1142\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_body \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m-> 1143\u001b[0m     \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mread()\n\u001b[1;32m   1145\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m encoding \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   1146\u001b[0m     encoding \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_encoding()\n",
+      "File \u001b[0;32m~/Library/Caches/pypoetry/virtualenvs/rpki-analysis-eyLydR3P-py3.12/lib/python3.12/site-packages/aiohttp/client_reqrep.py:1101\u001b[0m, in \u001b[0;36mClientResponse.read\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1099\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_body \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   1100\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1101\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_body \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcontent\u001b[38;5;241m.\u001b[39mread()\n\u001b[1;32m   1102\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m trace \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_traces:\n\u001b[1;32m   1103\u001b[0m             \u001b[38;5;28;01mawait\u001b[39;00m trace\u001b[38;5;241m.\u001b[39msend_response_chunk_received(\n\u001b[1;32m   1104\u001b[0m                 \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmethod, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39murl, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_body\n\u001b[1;32m   1105\u001b[0m             )\n",
+      "File \u001b[0;32m~/Library/Caches/pypoetry/virtualenvs/rpki-analysis-eyLydR3P-py3.12/lib/python3.12/site-packages/aiohttp/streams.py:373\u001b[0m, in \u001b[0;36mStreamReader.read\u001b[0;34m(self, n)\u001b[0m\n\u001b[1;32m    371\u001b[0m blocks \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m    372\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m--> 373\u001b[0m     block \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreadany()\n\u001b[1;32m    374\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m block:\n\u001b[1;32m    375\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "File \u001b[0;32m~/Library/Caches/pypoetry/virtualenvs/rpki-analysis-eyLydR3P-py3.12/lib/python3.12/site-packages/aiohttp/streams.py:395\u001b[0m, in \u001b[0;36mStreamReader.readany\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    391\u001b[0m \u001b[38;5;66;03m# TODO: should be `if` instead of `while`\u001b[39;00m\n\u001b[1;32m    392\u001b[0m \u001b[38;5;66;03m# because waiter maybe triggered on chunk end,\u001b[39;00m\n\u001b[1;32m    393\u001b[0m \u001b[38;5;66;03m# without feeding any data\u001b[39;00m\n\u001b[1;32m    394\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_buffer \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_eof:\n\u001b[0;32m--> 395\u001b[0m     \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_wait(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreadany\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    397\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_read_nowait(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "File \u001b[0;32m~/Library/Caches/pypoetry/virtualenvs/rpki-analysis-eyLydR3P-py3.12/lib/python3.12/site-packages/aiohttp/streams.py:302\u001b[0m, in \u001b[0;36mStreamReader._wait\u001b[0;34m(self, func_name)\u001b[0m\n\u001b[1;32m    300\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    301\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_timer:\n\u001b[0;32m--> 302\u001b[0m         \u001b[38;5;28;01mawait\u001b[39;00m waiter\n\u001b[1;32m    303\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    304\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_waiter \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[0;31mClientPayloadError\u001b[0m: Response payload is not completed"
+     ]
+    }
+   ],
    "source": [
     "async with aiohttp.ClientSession() as session:\n",
     "    async with session.get('https://ftp.ripe.net/pub/stats/ripencc/nro-stats/latest/nro-delegated-stats') as resp:\n",
-    "        data = read_delegated_stats(io.StringIO(await resp.text()))\n",
+    "        data = read_delegated_extended_stats(io.StringIO(await resp.text()))\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ee43faca-c77f-4973-ba3d-a6f6019d4c1c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "rir                        category\n",
-       "country                    category\n",
-       "afi                        category\n",
-       "raw_resource                 object\n",
-       "length                        int64\n",
-       "date            datetime64[ns, UTC]\n",
-       "status                     category\n",
-       "opaque_id                    object\n",
-       "category                   category\n",
-       "resource                     object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0c998446-97a1-4f10-a9e3-7b85cb744ff1",
    "metadata": {},
    "outputs": [],
@@ -77,40 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8a4e5789-1cfa-44b0-a7e7-b26ebb314a1f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "opaque_id\n",
-       "00004a29a9bbf62af6b8e5b91b760abc                                        [192.149.81.0/24]\n",
-       "000076699efb0f677b8a77052cacd0eb                                        [204.68.168.0/24]\n",
-       "0001f0f8-7af5-4144-8069-8bcb938afb99                                     [83.243.24.0/21]\n",
-       "0004cc00-194f-4e6b-83fa-430c6b1e25cc                                 [2001:67c:1034::/48]\n",
-       "00057f30-ef27-478d-aa11-1e7d2c8bf67c                    [45.153.144.0/22, 2a0f:3d40::/29]\n",
-       "                                                              ...                        \n",
-       "ffff0239b0911043080384096bee384b                                         [208.68.80.0/22]\n",
-       "iana                                    [160.20.241.0/24, 160.20.245.0/24, 192.47.28.0...\n",
-       "ietf                                    [0.0.0.0/8, 10.0.0.0/8, 100.64.0.0/10, 127.0.0...\n",
-       "lacnic                                  [45.6.236.0/22, 45.68.33.0/24, 45.68.56.0/21, ...\n",
-       "ripencc                                 [45.88.224.0/22, 45.145.36.0/22, 46.255.24.0/2...\n",
-       "Name: resource, Length: 109286, dtype: object"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "resources_by_uuid.resource.apply(lambda x: list(map(str, x.iter_cidrs())))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "bd897c38-bc0a-493b-b176-e65b9e0446b5",
    "metadata": {},
    "outputs": [],
@@ -120,118 +98,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "90975756-7bc7-42b1-9bc5-8656b40fc847",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>opaque_id</th>\n",
-       "      <th>ipv4_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>53551</th>\n",
-       "      <td>96d71713b022d9b63365ab30f8154c9c</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47935</th>\n",
-       "      <td>81fae7555e311369b0290c7fe7616bd9</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>91423</th>\n",
-       "      <td>bdf1235f-3296-434a-b2e3-6de246ef7ba8</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36098</th>\n",
-       "      <td>57722611-75ba-4b70-a31a-38537523fe15</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>91425</th>\n",
-       "      <td>bdf4f5c5-24c9-4340-9045-b1100f4bc712</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27969</th>\n",
-       "      <td>3a7b40ab58f6de4849b12c87e5806b7c</td>\n",
-       "      <td>70056448</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32400</th>\n",
-       "      <td>4a8a91b5b89d3f900098ebf73ca0b118</td>\n",
-       "      <td>77101824</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>101033</th>\n",
-       "      <td>e220ed812a4c17f6a76b9b930dae7f50</td>\n",
-       "      <td>80084224</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>90717</th>\n",
-       "      <td>bb474b75b6f23182ffa56daf1cf9ec23</td>\n",
-       "      <td>221958912</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>109283</th>\n",
-       "      <td>ietf</td>\n",
-       "      <td>592709632</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>109286 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                   opaque_id  ipv4_count\n",
-       "53551       96d71713b022d9b63365ab30f8154c9c           0\n",
-       "47935       81fae7555e311369b0290c7fe7616bd9           0\n",
-       "91423   bdf1235f-3296-434a-b2e3-6de246ef7ba8           0\n",
-       "36098   57722611-75ba-4b70-a31a-38537523fe15           0\n",
-       "91425   bdf4f5c5-24c9-4340-9045-b1100f4bc712           0\n",
-       "...                                      ...         ...\n",
-       "27969       3a7b40ab58f6de4849b12c87e5806b7c    70056448\n",
-       "32400       4a8a91b5b89d3f900098ebf73ca0b118    77101824\n",
-       "101033      e220ed812a4c17f6a76b9b930dae7f50    80084224\n",
-       "90717       bb474b75b6f23182ffa56daf1cf9ec23   221958912\n",
-       "109283                                  ietf   592709632\n",
-       "\n",
-       "[109286 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "resources_by_uuid['ipv4_count'].reset_index().sort_values(['ipv4_count'])"
    ]
