no index in parquet

--- a/workbooks/delegated_extended_parquet.ipynb
+++ b/workbooks/delegated_extended_parquet.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_extended.to_parquet('nro-delegated-stats-20241105.parquet')"
+    "df_extended.to_parquet('nro-delegated-stats-20241105.parquet', index=False)"
    ]
   },
   {
