--- a/workbooks/asn_ranges_delegated_extended.ipynb
+++ b/workbooks/asn_ranges_delegated_extended.ipynb
@@ -57,6 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pyinterval may not be installable on 3.13\n",
     "from interval import interval\n",
     "\n",
     "def interval_from_length(row) -> interval:\n",
@@ -1559,7 +1560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
