--- a/workbooks/announcements_by_rir.ipynb
+++ b/workbooks/announcements_by_rir.ipynb
@@ -81,7 +81,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>64073</td>\n",
+       "      <td>216425</td>\n",
        "      <td>0.0.0.0/0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
@@ -122,60 +122,60 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1165526</th>\n",
+       "      <th>1171506</th>\n",
        "      <td>63199</td>\n",
        "      <td>223.255.250.0/24</td>\n",
-       "      <td>356.0</td>\n",
+       "      <td>360.0</td>\n",
        "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1165527</th>\n",
+       "      <th>1171507</th>\n",
        "      <td>63199</td>\n",
        "      <td>223.255.251.0/24</td>\n",
-       "      <td>356.0</td>\n",
+       "      <td>360.0</td>\n",
        "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1165528</th>\n",
+       "      <th>1171508</th>\n",
        "      <td>58519</td>\n",
        "      <td>223.255.252.0/24</td>\n",
-       "      <td>356.0</td>\n",
+       "      <td>358.0</td>\n",
        "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1165529</th>\n",
+       "      <th>1171509</th>\n",
        "      <td>58519</td>\n",
        "      <td>223.255.253.0/24</td>\n",
-       "      <td>356.0</td>\n",
+       "      <td>358.0</td>\n",
        "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1165530</th>\n",
+       "      <th>1171510</th>\n",
        "      <td>55415</td>\n",
        "      <td>223.255.254.0/24</td>\n",
-       "      <td>371.0</td>\n",
+       "      <td>373.0</td>\n",
        "      <td>24</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1165515 rows × 4 columns</p>\n",
+       "<p>1171495 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        origin            prefix  seen_by_peers  prefix_length\n",
-       "16       64073         0.0.0.0/0            1.0              0\n",
-       "17       50628         0.0.0.0/0            1.0              0\n",
-       "18       34927         0.0.0.0/0            2.0              0\n",
-       "19       35708         0.0.0.0/0            1.0              0\n",
-       "20       56755         0.0.0.0/0            1.0              0\n",
-       "...        ...               ...            ...            ...\n",
-       "1165526  63199  223.255.250.0/24          356.0             24\n",
-       "1165527  63199  223.255.251.0/24          356.0             24\n",
-       "1165528  58519  223.255.252.0/24          356.0             24\n",
-       "1165529  58519  223.255.253.0/24          356.0             24\n",
-       "1165530  55415  223.255.254.0/24          371.0             24\n",
+       "         origin            prefix  seen_by_peers  prefix_length\n",
+       "16       216425         0.0.0.0/0            1.0              0\n",
+       "17        50628         0.0.0.0/0            1.0              0\n",
+       "18        34927         0.0.0.0/0            2.0              0\n",
+       "19        35708         0.0.0.0/0            1.0              0\n",
+       "20        56755         0.0.0.0/0            1.0              0\n",
+       "...         ...               ...            ...            ...\n",
+       "1171506   63199  223.255.250.0/24          360.0             24\n",
+       "1171507   63199  223.255.251.0/24          360.0             24\n",
+       "1171508   58519  223.255.252.0/24          358.0             24\n",
+       "1171509   58519  223.255.253.0/24          358.0             24\n",
+       "1171510   55415  223.255.254.0/24          373.0             24\n",
        "\n",
-       "[1165515 rows x 4 columns]"
+       "[1171495 rows x 4 columns]"
       ]
      },
      "execution_count": 3,
@@ -245,35 +245,35 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>109351</th>\n",
+       "      <th>109354</th>\n",
        "      <td>PS</td>\n",
        "      <td>1.178.112.0</td>\n",
        "      <td>2007-11-26 00:00:00+00:00</td>\n",
        "      <td>assigned</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>109352</th>\n",
+       "      <th>109355</th>\n",
        "      <td>PS</td>\n",
        "      <td>1.178.128.0</td>\n",
        "      <td>2007-11-26 00:00:00+00:00</td>\n",
        "      <td>assigned</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>109356</th>\n",
+       "      <th>109359</th>\n",
        "      <td>PS</td>\n",
        "      <td>1.178.208.0</td>\n",
        "      <td>2010-06-25 00:00:00+00:00</td>\n",
        "      <td>assigned</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>109357</th>\n",
+       "      <th>109360</th>\n",
        "      <td>ES</td>\n",
        "      <td>1.178.224.0</td>\n",
        "      <td>2010-06-25 00:00:00+00:00</td>\n",
        "      <td>assigned</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>109360</th>\n",
+       "      <th>109363</th>\n",
        "      <td>PS</td>\n",
        "      <td>1.179.40.0</td>\n",
        "      <td>2009-05-18 00:00:00+00:00</td>\n",
@@ -287,60 +287,60 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>718933</th>\n",
+       "      <th>719037</th>\n",
        "      <td>ZZ</td>\n",
        "      <td>2a14:fd00::</td>\n",
-       "      <td>2024-12-20 00:00:00+00:00</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
        "      <td>available</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>718934</th>\n",
+       "      <th>719038</th>\n",
        "      <td>ZZ</td>\n",
        "      <td>2a14:fe00::</td>\n",
-       "      <td>2024-12-20 00:00:00+00:00</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
        "      <td>available</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>718935</th>\n",
+       "      <th>719039</th>\n",
        "      <td>ZZ</td>\n",
        "      <td>2a15::</td>\n",
-       "      <td>2024-12-20 00:00:00+00:00</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
        "      <td>available</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>718936</th>\n",
+       "      <th>719040</th>\n",
        "      <td>ZZ</td>\n",
        "      <td>2a16::</td>\n",
-       "      <td>2024-12-20 00:00:00+00:00</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
        "      <td>available</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>718937</th>\n",
+       "      <th>719041</th>\n",
        "      <td>ZZ</td>\n",
        "      <td>2a18::</td>\n",
-       "      <td>2024-12-20 00:00:00+00:00</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
        "      <td>available</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>205684 rows × 4 columns</p>\n",
+       "<p>205690 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       country raw_resource                      date     status\n",
-       "109351      PS  1.178.112.0 2007-11-26 00:00:00+00:00   assigned\n",
-       "109352      PS  1.178.128.0 2007-11-26 00:00:00+00:00   assigned\n",
-       "109356      PS  1.178.208.0 2010-06-25 00:00:00+00:00   assigned\n",
-       "109357      ES  1.178.224.0 2010-06-25 00:00:00+00:00   assigned\n",
-       "109360      PS   1.179.40.0 2009-05-18 00:00:00+00:00   assigned\n",
+       "109354      PS  1.178.112.0 2007-11-26 00:00:00+00:00   assigned\n",
+       "109355      PS  1.178.128.0 2007-11-26 00:00:00+00:00   assigned\n",
+       "109359      PS  1.178.208.0 2010-06-25 00:00:00+00:00   assigned\n",
+       "109360      ES  1.178.224.0 2010-06-25 00:00:00+00:00   assigned\n",
+       "109363      PS   1.179.40.0 2009-05-18 00:00:00+00:00   assigned\n",
        "...        ...          ...                       ...        ...\n",
-       "718933      ZZ  2a14:fd00:: 2024-12-20 00:00:00+00:00  available\n",
-       "718934      ZZ  2a14:fe00:: 2024-12-20 00:00:00+00:00  available\n",
-       "718935      ZZ       2a15:: 2024-12-20 00:00:00+00:00  available\n",
-       "718936      ZZ       2a16:: 2024-12-20 00:00:00+00:00  available\n",
-       "718937      ZZ       2a18:: 2024-12-20 00:00:00+00:00  available\n",
+       "719037      ZZ  2a14:fd00:: 2024-12-22 00:00:00+00:00  available\n",
+       "719038      ZZ  2a14:fe00:: 2024-12-22 00:00:00+00:00  available\n",
+       "719039      ZZ       2a15:: 2024-12-22 00:00:00+00:00  available\n",
+       "719040      ZZ       2a16:: 2024-12-22 00:00:00+00:00  available\n",
+       "719041      ZZ       2a18:: 2024-12-22 00:00:00+00:00  available\n",
        "\n",
-       "[205684 rows x 4 columns]"
+       "[205690 rows x 4 columns]"
       ]
      },
      "execution_count": 5,
@@ -361,7 +361,7 @@
     {
      "data": {
       "text/plain": [
-       "(615497, 10)"
+       "(615598, 10)"
       ]
      },
      "execution_count": 6,
@@ -408,35 +408,35 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>109351</th>\n",
+       "      <th>109354</th>\n",
        "      <td>PS</td>\n",
        "      <td>1.178.112.0</td>\n",
        "      <td>2007-11-26 00:00:00+00:00</td>\n",
        "      <td>assigned</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>109352</th>\n",
+       "      <th>109355</th>\n",
        "      <td>PS</td>\n",
        "      <td>1.178.128.0</td>\n",
        "      <td>2007-11-26 00:00:00+00:00</td>\n",
        "      <td>assigned</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>109356</th>\n",
+       "      <th>109359</th>\n",
        "      <td>PS</td>\n",
        "      <td>1.178.208.0</td>\n",
        "      <td>2010-06-25 00:00:00+00:00</td>\n",
        "      <td>assigned</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>109357</th>\n",
+       "      <th>109360</th>\n",
        "      <td>ES</td>\n",
        "      <td>1.178.224.0</td>\n",
        "      <td>2010-06-25 00:00:00+00:00</td>\n",
        "      <td>assigned</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>109360</th>\n",
+       "      <th>109363</th>\n",
        "      <td>PS</td>\n",
        "      <td>1.179.40.0</td>\n",
        "      <td>2009-05-18 00:00:00+00:00</td>\n",
@@ -450,35 +450,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>360865</th>\n",
+       "      <th>360912</th>\n",
        "      <td>DE</td>\n",
        "      <td>217.224.0.0</td>\n",
        "      <td>2001-04-04 00:00:00+00:00</td>\n",
        "      <td>assigned</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>361344</th>\n",
+       "      <th>361391</th>\n",
        "      <td>NL</td>\n",
        "      <td>220.158.196.0</td>\n",
        "      <td>2015-10-07 00:00:00+00:00</td>\n",
        "      <td>assigned</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>361747</th>\n",
+       "      <th>361794</th>\n",
        "      <td>IQ</td>\n",
        "      <td>223.25.120.0</td>\n",
        "      <td>2011-04-11 00:00:00+00:00</td>\n",
        "      <td>assigned</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>361773</th>\n",
+       "      <th>361820</th>\n",
        "      <td>NL</td>\n",
        "      <td>223.27.112.0</td>\n",
        "      <td>2010-08-24 00:00:00+00:00</td>\n",
        "      <td>assigned</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>361774</th>\n",
+       "      <th>361821</th>\n",
        "      <td>NL</td>\n",
        "      <td>223.27.114.0</td>\n",
        "      <td>2010-08-24 00:00:00+00:00</td>\n",
@@ -486,24 +486,24 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>95185 rows × 4 columns</p>\n",
+       "<p>95192 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       country   raw_resource                      date    status\n",
-       "109351      PS    1.178.112.0 2007-11-26 00:00:00+00:00  assigned\n",
-       "109352      PS    1.178.128.0 2007-11-26 00:00:00+00:00  assigned\n",
-       "109356      PS    1.178.208.0 2010-06-25 00:00:00+00:00  assigned\n",
-       "109357      ES    1.178.224.0 2010-06-25 00:00:00+00:00  assigned\n",
-       "109360      PS     1.179.40.0 2009-05-18 00:00:00+00:00  assigned\n",
+       "109354      PS    1.178.112.0 2007-11-26 00:00:00+00:00  assigned\n",
+       "109355      PS    1.178.128.0 2007-11-26 00:00:00+00:00  assigned\n",
+       "109359      PS    1.178.208.0 2010-06-25 00:00:00+00:00  assigned\n",
+       "109360      ES    1.178.224.0 2010-06-25 00:00:00+00:00  assigned\n",
+       "109363      PS     1.179.40.0 2009-05-18 00:00:00+00:00  assigned\n",
        "...        ...            ...                       ...       ...\n",
-       "360865      DE    217.224.0.0 2001-04-04 00:00:00+00:00  assigned\n",
-       "361344      NL  220.158.196.0 2015-10-07 00:00:00+00:00  assigned\n",
-       "361747      IQ   223.25.120.0 2011-04-11 00:00:00+00:00  assigned\n",
-       "361773      NL   223.27.112.0 2010-08-24 00:00:00+00:00  assigned\n",
-       "361774      NL   223.27.114.0 2010-08-24 00:00:00+00:00  assigned\n",
+       "360912      DE    217.224.0.0 2001-04-04 00:00:00+00:00  assigned\n",
+       "361391      NL  220.158.196.0 2015-10-07 00:00:00+00:00  assigned\n",
+       "361794      IQ   223.25.120.0 2011-04-11 00:00:00+00:00  assigned\n",
+       "361820      NL   223.27.112.0 2010-08-24 00:00:00+00:00  assigned\n",
+       "361821      NL   223.27.114.0 2010-08-24 00:00:00+00:00  assigned\n",
        "\n",
-       "[95185 rows x 4 columns]"
+       "[95192 rows x 4 columns]"
       ]
      },
      "execution_count": 7,
@@ -522,13 +522,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = RisWhoisLookupMoreLessSpecific(df_riswhois)\n",
+    "lookup = RisWhoisLookupMoreLessSpecific(df_riswhois, visibility_threshold=15)\n",
     "\n",
     "def lookup_filter(row) -> Set[ExpandedRisEntry]:\n",
-    "    elements = lookup[row['raw_resource']]\n",
-    "\n",
-    "    return set(a for a in elements if a.seen_by_peers > 15)\n",
-    "    "
+    "    return lookup[row['raw_resource']]"
    ]
   },
   {
@@ -541,17 +538,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2f5206c7-4e34-4a2b-b939-4957cf68b2b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "announcements = df_extended.loc[(df_extended.rir == 'ripencc') & (df_extended.afi == 'ipv4')].apply(lookup_filter, axis=1)"
+    "announcements = df_extended.loc[(df_extended.rir == 'ripencc') & (df_extended.afi == 'ipv4')].sample(1000).apply(lookup_filter, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "34ca56eb-9ed8-4e4f-8927-c9caf91b7863",
    "metadata": {},
    "outputs": [],
@@ -561,18 +558,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "7df2077a-bd55-4799-a286-caa0bd8590f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "975"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(announced)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "0c20896d-1ec4-4ef1-8d91-437e48a2483a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "167115                {(57145, 91.226.250.0/24, 396.0, 24)}\n",
+       "168398                 {(31727, 91.236.26.0/23, 369.0, 23)}\n",
+       "153271                                                   {}\n",
+       "302682                {(12741, 195.225.68.0/24, 395.0, 24)}\n",
+       "353463    {(44539, 212.66.56.0/24, 406.0, 24), (44539, 2...\n",
+       "                                ...                        \n",
+       "244819                 {(32806, 185.38.32.0/22, 362.0, 22)}\n",
+       "119797                 {(44486, 37.44.215.0/24, 369.0, 24)}\n",
+       "155247                  {(31608, 84.205.0.0/19, 398.0, 19)}\n",
+       "164355                 {(3209, 91.208.193.0/24, 365.0, 24)}\n",
+       "129565                 {(60781, 45.154.56.0/24, 386.0, 24)}\n",
+       "Length: 1000, dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "announcements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbfc0c50-895c-44a4-94bf-03bb8cdbbf09",
    "metadata": {},
    "outputs": [],
    "source": []
